{
    "name": "GamePadInput",
    "maps": [
        {
            "name": "GamePlay",
            "id": "5c9d1a06-b049-4bf3-b34f-1808d6cf944c",
            "actions": [
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "7a5a924c-5068-4b96-ad86-c2e561be3554",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "6d5bfd3f-b64c-4182-b15d-ea044cdaa447",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateUp",
                    "type": "Button",
                    "id": "1e3eae50-5464-414a-9f48-3a17e54e38cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateDown",
                    "type": "Button",
                    "id": "ca15a9be-e480-4ed5-bec0-b185c71ff107",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectButton",
                    "type": "Button",
                    "id": "a3f61657-cf5a-4edb-9218-ed277c767efc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e349cde7-5be6-455b-909f-9879e03c650c",
                    "path": "<AndroidGamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37d860bc-a340-4c10-bd66-eb401b1feb8a",
                    "path": "<HID::XiYuan GAME CONTOROLER>/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4edc962-a798-4902-885b-79f57519e693",
                    "path": "<AndroidGamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f321c889-010d-4f0d-a74f-e17649269092",
                    "path": "<HID::XiYuan GAME CONTOROLER>/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0ed77a8-6a04-401b-837d-9d8731ebc99b",
                    "path": "<AndroidGamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0c1eda4-d154-478c-9dc3-8d6381ca8c96",
                    "path": "<HID::XiYuan GAME CONTOROLER>/hat/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb29bab4-fa06-4412-a704-464155724e71",
                    "path": "<AndroidGamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f5a65b96-bf1a-4e92-a720-0860542e5f38",
                    "path": "<HID::XiYuan GAME CONTOROLER>/hat/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3749d2bc-7542-4a47-a5b9-0cc94b4a2383",
                    "path": "<Joystick>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22e07101-4bcf-4c46-ab3f-9f94e5bfbcdc",
                    "path": "<AndroidJoystick>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7bb9cbd-3b47-4e7e-b94b-6a90caf32a3d",
                    "path": "<AndroidGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3824a89-13ed-4b9c-8b0f-1a4e6030946f",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "280fb46f-f8c2-4b19-8756-d000ce5e8d80",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e49b9b7e-b359-4bdd-a8b0-c3595170e32d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}